--- a/css/styles.scss
+++ b/css/styles.scss
@@ -66,7 +66,7 @@ body {
         width: rem(480px);
     }
     @include phones {
-        width: 95%;
+        width: 30rem;
     }
 }
 
@@ -415,6 +415,7 @@ body {
         }
         @include tablets {
             flex-basis: 50%;
+            height: 25%;
         }
         @include phones {
             flex-basis: 50%;
@@ -579,6 +580,7 @@ body {
         }
         &__contain {
             margin-top: rem(10px);
+            line-height: 1.4rem;
         }
     }
 }
@@ -891,6 +893,7 @@ body {
     height: rem(56px);
     display: flex;
     flex-direction: column;
+    padding-left: rem(10px);
     &-top {
         padding-top: rem(5px);
     }
@@ -914,6 +917,7 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    padding-right: rem(10px);
 }
 
 .footer__container {
