--- a/css/styles.scss
+++ b/css/styles.scss
@@ -166,6 +166,9 @@ body {
     &-block-pic {
         max-width: 100%;
         max-height: 100%;
+        @include tablets {
+            padding: 0 13%;
+        }
     }
 }
 
@@ -194,7 +197,7 @@ body {
     color: #fff;
     display: flex;
     flex-direction: column;
-    padding-top: 7rem;
+    padding-top: 8rem;
     @include laptop {
         padding-top: 4rem;
     }
@@ -211,6 +214,7 @@ body {
         display: flex;
         max-width: 384px;
         @include tablets {
+            max-width: none;
         }
     }
 }
@@ -219,7 +223,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: rem(50px);
     margin-bottom: rem(20px);
 }
 
@@ -233,13 +236,16 @@ body {
         top: rem(86px);
         list-style: none;
         right: rem(44px);
+        @include tablets {
+            display: none;
+        }
     }
     &__item {
         margin-bottom: rem(9px);
         &-link {
             background: url('../img/ellipse-2.png') center center no-repeat;
-            width: rem(14px);
-            height: rem(14px);
+            width: 14px;
+            height: 14px;
             display: block;
         }
         &--active {
