--- a/css/styles.scss
+++ b/css/styles.scss
@@ -342,6 +342,9 @@ body {
 .we_best__container {
     flex-direction: column;
     justify-content: center;
+    @include tablets {
+        width: 100%;
+    }
 }
 
 .we_best__block__heading {
@@ -356,21 +359,29 @@ body {
     text-align: center;
     display: flex;
     justify-content: center;
+    @include phones {
+        flex-direction: column;
+    }
 }
 
 .features__item {
     display: flex;
     flex-direction: column;
     flex-basis: 28%;
-    max-width: rem(300px);
     vertical-align: top;
     margin: 0 rem(20px);
     overflow: hidden;
+    @include tablets {
+        margin: 0;
+    }
     &-heading {
         display: block;
         font-family: 'Lifehack', sans-serif;
         font-size: rem(24px);
         margin: rem(15px) 0;
+        @include tablets {
+            font-size: rem(20px);
+        }
     }
     &-text {
         font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -380,6 +391,7 @@ body {
         line-height: rem(26.2px);
         @include phones {
             line-height: 1.2;
+            font-size: 0.7rem;
         }
         font-weight: 300;
         color: $dark;
