--- a/css/styles.scss
+++ b/css/styles.scss
@@ -73,7 +73,7 @@ body {
 .main-sec__container {
     justify-content: space-between;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
 .header {
@@ -259,6 +259,9 @@ body {
     position: absolute;
     top: 5%;
     left: 5%;
+    @include phones {
+        font-size: 3rem;
+    }
 }
 
 .acco__list {
@@ -271,10 +274,10 @@ body {
 
 .acco__item--active {
     .acco__item__content {
-        width: rem(500px);
+        /* width: rem(500px); */
     }
     .acco__item__block-txt {
-        color: $yellow;
+        /* color: $yellow; */
     }
 }
 
@@ -339,6 +342,12 @@ body {
     justify-content: center;
 }
 
+.title-best {
+    @include phones {
+        font-size: 3.5rem;
+    }
+}
+
 .we_best__container {
     flex-direction: column;
     justify-content: center;
@@ -392,6 +401,7 @@ body {
         @include phones {
             line-height: 1.2;
             font-size: 0.7rem;
+            padding: 0 5px;
         }
         font-weight: 300;
         color: $dark;
@@ -466,6 +476,7 @@ body {
     font-size: 1rem;
     transition: .47s ease;
     overflow: hidden;
+    text-align: center;
     @include laptop {
         line-height: 1.3rem;
     }
@@ -483,6 +494,7 @@ body {
     }
     &-name {
         font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+        font-weight: 300;
     }
     &-text {
         font-family: 'Ubuntu', sans-serif;
@@ -752,6 +764,10 @@ body {
     width: 50%;
     margin-right: rem(20px);
     flex: 1;
+    @include tablets {
+        width: 100%;
+        margin-right: 0;
+    }
 }
 
 .right-form {
