--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,11 +74,16 @@ body {
     justify-content: space-between;
     flex-direction: column;
     height: 100vh;
+    width: 95%;
 }
 
 .header {
     &__main {
         min-height: rem(92px);
+        margin-right: 9%;
+        @include phones {
+            margin-right: 13%;
+        }
     }
     &__main-inner {
         display: flex;
@@ -980,4 +985,28 @@ body {
 
 .icon:first-child {
     margin-left: 0;
+}
+
+.hambg__menu {
+    position: fixed;
+    top: 3%;
+    right: 5%;
+    cursor: pointer;
+    @include phones {
+        top: 2.8%;
+    }
+}
+
+.hambg__icon {
+    width: 32px;
+    height: 32px;
+    fill: #fff;
+}
+
+.hambg__line {
+    width: 32px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #fff;
+    margin: 5px;
 }
