--- a/css/styles.scss
+++ b/css/styles.scss
@@ -737,8 +737,96 @@ body {
     width: 100%;
 }
 
-.burgers-info {
-    background-color: $orange;
+.slider__menu {
+    background-color: #f9b43b;
+    /* background-color: -moz-linear-gradient(center, #f9b43b, #eb8c38);
+    background-color: -webkit-linear-gradient(center, #f9b43b, #eb8c38);
+    background-color: -o-linear-gradient(center, #f9b43b, #eb8c38);
+    background-color: -ms-linear-gradient(center, #f9b43b, #eb8c38); */
+    display: flex;
+    &__lh-arrow {
+        width: 5%;
+    }
+    &__rh-arrow {
+        width: 5%;
+    }
+    &__block {
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        @include tablets {
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
+}
+
+.slider__burger {
+    width: 50%;
+    @include tablets {
+        width: 100%;
+    }
+    &-photo {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
+
+.slider__text {
+    width: 50%;
+    @include laptop {
+        line-height: 3.5rem;
+    }
+    @include tablets {
+        width: 90%;
+    }
+    &-desc {
+        line-height: 1.65rem;
+        @include laptop {
+            line-height: 1.35rem;
+        }
+    }
+    &-price {
+        display: flex;
+        align-items: center;
+    }
+    &-btn {
+        border: none;
+        width: rem(101px);
+        border-radius: rem(7px);
+        height: 40px;
+        text-transform: uppercase;
+        background: #e45028;
+        color: #fff;
+        margin-left: rem(30px);
+        cursor: pointer;
+        transition: .4s;
+        margin-bottom: rem(17px);
+        &:hover {
+            background: darken(#e45028, 15%);
+        }
+    }
+}
+
+.slider__menu__lh-arrow, .slider__menu__rh-arrow {
+    font-size: rem(72px);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.slider__price {
+    color: rgb(146, 11, 11);
+    @include laptop {
+        display: flex;
+        align-items: baseline;
+    }
+    &-small {
+        font-size: 2rem;
+    }
 }
 
 .order__btn {
