--- a/css/styles.scss
+++ b/css/styles.scss
@@ -265,6 +265,7 @@ body {
 
 .menu__popup {
     position: fixed;
+    z-index: 800;
     width: 100%;
     max-height: 650px;
     display: none;
@@ -468,7 +469,7 @@ body {
         line-height: rem(26.2px);
         @include phones {
             line-height: 1.2;
-            font-size: 0.7rem;
+            font-size: 0.8rem;
             padding: 0 5px;
         }
         font-weight: 300;
@@ -476,15 +477,21 @@ body {
         overflow: hidden;
     }
     &-pic {
-        min-height: rem(130px);
+        min-height: 6rem;
+        @include phones {
+            min-height: 5.1rem;
+        }
         &_meat {
             background: url('../img/icons/best/best_meat.svg') center center no-repeat;
+            background-size: contain;
         }
         &_hand {
             background: url('../img/icons/best/best_hand.svg') center center no-repeat;
+            background-size: contain;
         }
         &_natural {
             background: url('../img/icons/best/best_natural.svg') center center no-repeat;
+            background-size: contain;
         }
     }
 }
@@ -737,8 +744,33 @@ body {
     width: 100%;
 }
 
+.container--slider {
+    @include tablets {
+        width: 95%;
+    }
+}
+
+.title-slider {
+    @include tablets {
+    padding: 0 9rem;
+    text-align: center;
+    font-size: 3rem;
+    line-height: 2.5rem;
+    }
+    @include phones {
+        padding: 1rem 3rem;
+
+    }
+    @include phonesOld {
+        padding: 0;
+    }
+    
+    
+}
+
 .slider__menu {
-    background-color: #f9b43b;
+    background: linear-gradient(to bottom, #f9b43b 0%, #eb8c38 40%, #eb8c38 60%, #eb8c38 60%, #f9b43b 100%);
+    /* background-color: #f9b43b; */
     /* background-color: -moz-linear-gradient(center, #f9b43b, #eb8c38);
     background-color: -webkit-linear-gradient(center, #f9b43b, #eb8c38);
     background-color: -o-linear-gradient(center, #f9b43b, #eb8c38);
@@ -751,6 +783,7 @@ body {
         width: 5%;
     }
     &__block {
+        position: relative;
         width: 90%;
         display: flex;
         flex-direction: row;
@@ -759,10 +792,42 @@ body {
             flex-direction: column;
             justify-content: center;
         }
+        @include phones {
+            justify-content: flex-end;
+        }
     }
 }
 
 .slider__burger {
+    &-consist {
+        position: absolute;
+        top: 12%;
+        @include tablets {
+            left: 5%;
+            width: 80px;
+            height: 90px;
+        }
+        @include phones {
+            top: 5%;
+            left: 0;
+        }
+        width: 100px;
+        background-color: rgba(227,80,40,.4);
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 6px;
+        &_name {
+            text-transform: uppercase;
+            font-family: 'Gagalin', Verdana, Geneva, Tahoma, sans-serif;
+            font-size: 1rem;
+            font-weight: 300;
+            color: #fff;
+            margin: 0.5rem 0 0 0;
+        }
+    }
     width: 50%;
     @include tablets {
         width: 100%;
@@ -771,6 +836,12 @@ body {
         width: 100%;
         height: 100%;
         object-fit: contain;
+        @include tablets {
+            padding: 0 70px;
+        }
+        @include phones {
+        padding: 0;
+        }
     }
 }
 
@@ -784,6 +855,9 @@ body {
     }
     &-desc {
         line-height: 1.65rem;
+        @include tablets {
+            text-align: center;
+        }
         @include laptop {
             line-height: 1.35rem;
         }
@@ -791,12 +865,19 @@ body {
     &-price {
         display: flex;
         align-items: center;
+        @include tablets {
+            justify-content: center;
+        }
     }
     &-btn {
+        @include tablets {
+            font-size: 0.9rem;
+            height: rem(32px);
+        }
         border: none;
         width: rem(101px);
         border-radius: rem(7px);
-        height: 40px;
+        height: rem(40px);
         text-transform: uppercase;
         background: #e45028;
         color: #fff;
@@ -819,13 +900,16 @@ body {
 }
 
 .slider__price {
-    color: rgb(146, 11, 11);
+    color:#e35028;
     @include laptop {
         display: flex;
         align-items: baseline;
     }
     &-small {
         font-size: 2rem;
+    }
+    @include tablets {
+        font-size: 3.5em;
     }
 }
 
@@ -1068,6 +1152,9 @@ body {
 
 .footer {
     height: rem(60px);
+    @include phones {
+        height: 5.75rem;
+    }
     width: 100%;
     background: url('../img/bg__footer.png') center center no-repeat;
     background-size: cover;
@@ -1084,6 +1171,10 @@ body {
     display: flex;
     flex-direction: column;
     padding-left: rem(10px);
+    @include phones {
+        width: 100%;
+        align-items: center;
+    }
     &-top {
         padding-top: rem(5px);
     }
@@ -1108,6 +1199,10 @@ body {
     justify-content: flex-end;
     align-items: center;
     padding-right: rem(10px);
+    @include phones {
+        width: 100%;
+        justify-content: center;
+    }
 }
 
 .footer__container {
@@ -1115,6 +1210,10 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+    @include phones {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .icon {
@@ -1136,6 +1235,7 @@ body {
 }
 
 .hambg__menu {
+    z-index: 100;
     position: fixed;
     top: 3%;
     right: 5%;
