--- a/css/styles.scss
+++ b/css/styles.scss
@@ -275,6 +275,7 @@ body {
     &-link {
         color: #fff;
         text-decoration: none;
+        text-shadow: 0 0 15px;
     }
     &-logo {
         position: absolute;
@@ -301,6 +302,7 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding-left: 0;
     }
     &-item {
         font-size: 1.5rem;
@@ -1250,6 +1252,10 @@ body {
     @include phones {
         top: 2.8%;
     }
+    @include phonesOld {
+        top: 3.5%;
+        right: 3%;
+    }
 }
 
 .hambg__icon {
@@ -1259,8 +1265,8 @@ body {
 }
 
 .hambg__line {
-    width: 32px;
-    height: 4px;
+    width: rem(32px);
+    height: rem(4px);
     border-radius: 4px;
     background-color: #fff;
     margin: 5px;
