--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -23,14 +23,26 @@ h4 {
     box-sizing: border-box;
 }
 
-$dark: #2f3234;
+
+$orange: #e25028;
 $yellow: #f8b43a;
-$orange: #f9b43b;
+$green: #8ac04e;
+$dark: #2f3234;
+$white: #ffffff;
+
 body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
+}
+
+.maincont {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0%;
+    transition: top 1s;
 }
 
 .wrapper {
@@ -271,7 +283,7 @@ body {
     width: 100%;
     max-height: 650px;
     display: flex;
-    transition: top .5s ease;
+    transition: top .5s ease-out;
     &-link {
         color: #fff;
         text-decoration: none;
@@ -308,7 +320,7 @@ body {
         padding-left: 0;
     }
     &-item {
-        font-size: 2rem;
+        font-size: 3rem;
         font-weight: 300;
         font-family: 'Gagalin', sans-serif;
         text-transform: uppercase;
@@ -392,20 +404,22 @@ body {
 .acco__item--active {
     .acco__item__content {
         width: rem(400px);
-        transition: width .4s;
-        
+        /* transition: width .4s; */
+        @include phones {
+            width: 17rem;
+        }
     }
     .acco__item__block-txt {
         color: $yellow;
     }
     @include phones {
-        width: 12rem;
+        width: 20rem;
     }
 }
 
 .acco__item__content {
-    width: 0; //400px
-    
+    width: 0; 
+    transition: width .4s;
     height: 100%;
     color: #fff;
     background: rgba(47, 50, 52, .93);
@@ -812,11 +826,12 @@ body {
 }
 
 .container--slider {
+    align-items: center;
     @include tablets {
         width: 95%;
     }
 }
-
+/* 
 .title-slider {
     @include tablets {
     padding: 0 9rem;
@@ -837,11 +852,6 @@ body {
 
 .slider__menu {
     background: linear-gradient(to bottom, #f9b43b 0%, #eb8c38 40%, #eb8c38 60%, #eb8c38 60%, #f9b43b 100%);
-    /* background-color: #f9b43b; */
-    /* background-color: -moz-linear-gradient(center, #f9b43b, #eb8c38);
-    background-color: -webkit-linear-gradient(center, #f9b43b, #eb8c38);
-    background-color: -o-linear-gradient(center, #f9b43b, #eb8c38);
-    background-color: -ms-linear-gradient(center, #f9b43b, #eb8c38); */
     display: flex;
     &__lh-arrow {
         width: 5%;
@@ -851,10 +861,13 @@ body {
     }
     &__block {
         position: relative;
-        width: 90%;
+        right: 0;
+        width: rem(940px);
+        height: 100%;
         display: flex;
-        flex-direction: row;
         align-items: center;
+        align-content: center;
+        justify-content: center;
         @include tablets {
             flex-direction: column;
             justify-content: center;
@@ -863,6 +876,14 @@ body {
             justify-content: flex-end;
         }
     }
+}
+
+.slider__burger-list {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding-left: 0;
 }
 
 .slider__burger {
@@ -958,7 +979,21 @@ body {
     }
 }
 
+.slider__menu-inner {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+    align-items: center;
+}
+
+
 .slider__menu__lh-arrow, .slider__menu__rh-arrow {
+    position: absolute;
     font-size: rem(72px);
     color: #fff;
     display: flex;
@@ -968,6 +1003,8 @@ body {
         padding: 0;
     }
 }
+
+
 
 .slider__price {
     color:#e35028;
@@ -982,6 +1019,378 @@ body {
         font-size: 3.5em;
     }
 }
+ */
+
+.burger {
+    background: linear-gradient(to bottom, #f9b43b 0%, #eb8c38 40%, #eb8c38 60%, #eb8c38 60%, #f9b43b 100%);
+}
+
+// Carousel
+.burger-container {
+    align-items: center;
+    width: rem(973px);
+}
+
+.burger-slider {
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+    width: 100%;
+    height: 70%;
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 rem(10px);
+    overflow: hidden;
+    @include tablets {
+        height: 70%;
+        align-content: center;
+        justify-content: center;
+    }
+    @include phones {
+        height: 100%;
+    }
+}
+
+.slider__btn {
+    position: absolute;
+    text-decoration: none;
+    font-size: 72px;
+    color: $white;
+    font-weight: lighter;
+    cursor: pointer;
+    top: 50%;
+    z-index: 20;
+    transform: translate(-50%);
+    transition: .3s;
+    &:hover {
+        color: $orange;
+    }
+}
+
+
+.slider__text {
+    &-btn {
+        @include tablets {
+            font-size: 0.9rem;
+            height: rem(32px);
+        }
+        border: none;
+        width: rem(101px);
+        border-radius: rem(7px);
+        height: rem(40px);
+        text-transform: uppercase;
+        background: #e45028;
+        color: #fff;
+        margin-left: rem(30px);
+        cursor: pointer;
+        transition: .4s;
+        margin-bottom: rem(17px);
+        &:hover {
+            background: darken(#e45028, 15%);
+        }
+    }
+}
+
+.slider_btn_prev {
+    left: rem(10px);
+    @include phones {
+        left: rem(14px);
+    }
+}
+
+.slider_btn_next {
+    right: -13px;
+    @include phones {
+        right: rem(-4px);
+    }
+}
+
+.bottom__dots {
+    position: absolute;
+    display: flex;
+    bottom: 0;
+    left: 50%;
+}
+
+.bottom__dots-list {
+    display: flex;
+}
+
+.bottom__dots-item {
+    width: rem(10px);
+    height: rem(10px);
+    border-radius: 50%;
+    margin-right: rem(10px);
+    background-color: $orange;
+    transition: .3s;
+    cursor: pointer;
+    &:hover {
+        background-color: darken($orange, 15%);
+    }
+    &:last-child {
+        margin-right: 0;
+    }
+}
+
+.burger__carousel-list {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.burger__carousel {
+    position: relative;
+    right: 0;
+    width: rem(940px);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    @include tablets {
+        height: 70%;
+        flex-direction: column;
+    }
+}
+
+.burger__main__left-side {
+    position: relative;
+    max-width: 50%;
+    height: 100%;
+    @include tablets {
+        height: 50%;
+        max-width: 100%;
+        align-items: center;
+        text-align: center;
+        margin-right: 0;
+    }
+}
+
+.burger__main__right-side {
+    height: 100%;
+    width: 50%;
+    @include tablets {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+.burger__main__left-side__img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    @include tablets {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.section_title_burger {
+    color: $white;
+    line-height: 1em;
+    width: 80%;
+    text-align: center;
+    @include tablets {
+        margin: 0 auto;
+    }
+}
+
+.burger__main__left-side__block-img {
+    width: 100%;
+    height: 100%;
+    @include tablets {
+        text-align: center;
+    }
+    @include phones {
+        padding-top: rem(50px);
+    }
+}
+
+.burger__main__right-side__description {
+    padding-right: rem(25px);
+    font-size: 1rem;
+    color: #fff;
+}
+
+.section_title_burger_price {
+    font-family: 'Gagalin', sans-serif;
+    font-size: 3rem;
+    color: #e35028;
+    &::after {
+        content: "рублей";
+        display: inline-block;
+        font-size: rem(30px);
+        margin-left: rem(3px);
+        @include tablets {
+            font-size: rem(22px);
+            margin-right: rem(20px);
+        }
+    }
+}
+
+.btn_link_burger {
+    margin-left: rem(25px);
+    @include tablets {
+        margin-left: 0;
+    }
+}
+
+// End Carousel
+// block ingridients
+.ingridients {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.block__float-ingridients {
+    color: #fff;
+    position: relative;
+    background: rgba(227, 80, 40, 0.4);
+    width: 5.625rem;
+    height: 5.625rem;
+    border-radius: 0.3125rem;
+    padding: rem(13px) rem(23px);
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+    &:hover {
+        cursor: pointer;
+        background-color: darken($orange, 3%);
+    }
+    @include phones {
+        top: 10%;
+        width: 4.625rem;
+        height: 4.625rem;
+        padding: rem(8px) rem(13px);
+    }
+}
+
+.float-ingridients__list {
+    list-style: none;
+    opacity: 0;
+    transition: opacity .4s ease-in;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: -9999px;
+    bottom: 0;
+    display: flex;
+    flex-flow: column nowrap;
+    background: #fff;
+    border-radius: 0.3125rem;
+    width: 14rem;
+    height: rem(350px);
+    padding: rem(10px) rem(5px) 0 rem(20px);
+    color: #000;
+    overflow: hidden;
+    z-index: 3;
+    text-align: left;
+    transition: opacity .3s;
+    @include phones {
+        width: rem(200px);
+        height: rem(250px);
+        overflow: scroll;
+    }
+}
+
+.ingridients__btn__close {
+    position: absolute;
+    width: rem(30px);
+    height: rem(30px);
+    right: 0;
+    top: -1%;
+    font-size: rem(24px);
+    line-height: 1.4;
+    text-align: center;
+    color: $orange;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.float-ingridients-main-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.float-ingridients-main-text {
+    color: #fff;
+    font-family: 'Gagalin', Arial, Helvetica, sans-serif;
+    font-size: rem(12px);
+    text-align: center;
+    @include phones {
+        font-size: rem(10px);
+    }
+}
+
+.float-ingridients__item {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 0.3125rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.ingridients__img {
+    vertical-align: baseline;
+}
+.ingridients__text {
+    padding-right: 6%;
+}
+
+.float-ingridients__kkal-img {
+    width: 60%;
+    height: 60%;
+}
+
+.block__float-ingridients__kkal {
+    color: #fff;
+    display: block;
+    position: absolute;
+    top: 80%;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 5.625rem;
+    height: 5.625rem;
+    text-align: center;
+    z-index: 1;
+    @include tablets {
+        top: 0;
+        left: initial;
+        right: 0;
+        bottom: 0;
+    }
+    @include phones {
+        top: 9.5%;
+        padding: 3px 13px;
+    }
+    &::before {
+        display: block;
+        content: '1200';
+        position: absolute;
+        font-family: 'Gagalin', Arial, Helvetica, sans-serif;
+        font-size: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0;
+        right: 0;
+        bottom: 0;
+        @include phones {
+            font-size: 12px;
+        }
+    }
+}
+
+
+
 
 .order__btn {
     border-radius: 6px;
@@ -1215,10 +1624,10 @@ body {
     }
 }
 
-.map {
-    background: url('../img/bg__map.png') no-repeat;
-    background-size: cover;
+/* .map__block {
+    background-color: red;
 }
+ */
 
 .footer {
     height: rem(60px);
