--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -40,9 +40,9 @@ body {
 .maincont {
     width: 100%;
     height: 100%;
+    min-height: 600px;
     position: relative;
-    top: 0%;
-    transition: top 1s;
+    transition: 1s;
 }
 
 .wrapper {
@@ -139,6 +139,7 @@ body {
             }
         }
         &:after {
+            cursor: default;
             content: "•";
             color: #fff;
             padding-left: rem(21px);
@@ -160,9 +161,8 @@ body {
         text-decoration: none;
         color: #fff;
         &:hover {
-            color: darken(#fff, 20%);
-            transition: .2s ease;
-            text-decoration: underline;
+            text-shadow: 2px 3px 60px rgba(255,255,255,.75);
+            transition: text-shadow .2s ease;
         }
     }
 }
