--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -19,8 +19,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Ubuntu', sans-serif;
-  font-weight: 300; }
+  font-weight: 300;
+  overflow: hidden; }
 
+/* .wrapper {
+    position: relative;
+    width: 100%;
+    min-height: 100%;
+}
+ */
 .maincont {
   width: 100%;
   height: 100%;
@@ -28,13 +35,8 @@ body {
   position: relative;
   -webkit-transition: 1s;
   -o-transition: 1s;
-  transition: 1s; }
-
-.wrapper {
-  position: relative;
-  width: 100%;
-  min-height: 100%;
-  overflow: hidden; }
+  transition: 1s;
+  will-change: transform; }
 
 .main__block {
   min-height: 650px;
