--- a/app/css/styles.scss
+++ b/app/css/styles.scss
@@ -38,12 +38,12 @@ body {
     overflow: hidden;
 }
 
-/* .wrapper {
+.wrapper {
     position: relative;
     width: 100%;
     min-height: 100%;
 }
- */
+
 .maincont {
     width: 100%;
     height: 100%;
