--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -22,12 +22,11 @@ body {
   font-weight: 300;
   overflow: hidden; }
 
-/* .wrapper {
-    position: relative;
-    width: 100%;
-    min-height: 100%;
-}
- */
+.wrapper {
+  position: relative;
+  width: 100%;
+  min-height: 100%; }
+
 .maincont {
   width: 100%;
   height: 100%;
